[widget.macos.respect-system-appearance] "Clear Recent History..." window is not completely readable in Dark Mode
Categories
(Core :: Widget: Cocoa, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox90 | --- | verified |
People
(Reporter: mehmetxsahin, Assigned: bugzilla)
References
Details
Attachments
(5 files)
Nightly 90.0a1 (2021-05-08) (64-Bit)
macOS 11.3.1
1.) Enable System Dark Mode
2.) Enable widget.macos.respect-system-appearance
3.) Select Mac Menu Bar -> History -> "Clear Recent History..."
4.) Change in the Popup the "Time range to clear" to "Everything"
Actual: The background of "All selected items will be cleared.
This action cannot be undone." is white, so that the white text is not readable.
Expected: The background of "All selected items will be cleared.
This action cannot be undone." should be dark, so that the white text is readable.
This is only an issue in Dark Mode.
A screenshot is attached.
Thanks.
| Assignee | ||
Updated•4 years ago
|
| Assignee | ||
Comment 1•4 years ago
|
||
The sanitize window is the only place we use these colors on macOS: https://searchfox.org/mozilla-central/search?q=Window&path=.css&case=true®exp=false. They're also used in toolkit/themes/shared/notification.css, but we override the notification API with macOS native notifications.
Comment 3•4 years ago
|
||
| bugherder | ||
Thanks for fixing this issue. I noticed that there is very bright border around the box. I would expect a more grey color? Maybe this could be related to Bug 1710583? Thanks for checking :)
Updated•4 years ago
|
Comment 5•4 years ago
|
||
Reproduced the issue with Firefox 90.0a1 (20210508095613) on macOS 11.3.
The text is now readable with Firefox 90.0b4 (20210606185718) on macOS 11.3. Also as stated above a bright border color can be seen surrounding the box. Harry do you think it's related to bug 1710583, or a new issue should be filled? Thank you!
| Assignee | ||
Comment 6•4 years ago
|
||
Let's file a new bug, please. They may be related but we can always close them later.
Comment 7•4 years ago
|
||
(In reply to Harry Twyford [:harry] from comment #6)
Let's file a new bug, please. They may be related but we can always close them later.
Hello! Sorry for the late response. Looked into this today and it seems that the border color it's fixed by bug 1712750. As seen in the screenshot a grey border is now displayed. Is this correct? I think a new issue is no longer necessary as well. Closing this.
Updated•4 years ago
|
Description
•