Bug 1710269 - Use the correct system colors for Window/WindowFrame on macOS. r=mac-reviewers,mstange

The sanitize window is the only place we use these colors on macOS: https://searchfox.org/mozilla-central/search?q=Window&path=.css&case=true&regexp=false. They're also used in toolkit/themes/shared/notification.css, but we override the notification API with macOS native notifications.

Differential Revision: https://phabricator.services.mozilla.com/D114752